--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,18 @@
 body{
   margin: 0px !important;
 }
+
+.mat-toolbar-multiple-rows{
+  display: flex !important;
+  font-size: 1.5rem;
+  height: 60px;
+  box-sizing: border-box !important;
+  flex-direction: row !important;
+  color: white;
+  font-family: CircularSpTitle;
+  width: 100%;
+  background: linear-gradient(180deg, #2f302d 25%, #253029 100%);
+  box-shadow: -3px -3px 5px 0px #133022 inset;
+  align-items: center;
+  justify-content: flex-end;
+}
