--- a/src/app/Components/search/search.component.html
+++ b/src/app/Components/search/search.component.html
@@ -1,7 +1,14 @@
 <div [style.backgroundImage]="'url(' + backgroundImageUrl + ')'" class="searchContainerStyle">
+  <!-- <div class="inputContainerStyle">
+    <input class="searchInputStyle" matInput [formControl]="searchControl" placeholder="Search for artists">
+  </div> -->
   <div class="inputContainerStyle">
     <input class="searchInputStyle" matInput [formControl]="searchControl" placeholder="Search for artists">
+    <button mat-icon-button *ngIf="searchControl.value" (click)="clearSearch()">
+      <mat-icon>close</mat-icon>
+    </button>
   </div>
+
   <div class="artistsContainerStyle">
     <div (click)="getArtistAlbum(artist.id,artist)" class="artistLoopStyle" *ngFor="let artist of artists">
         <img *ngIf="artist.images[1]" class="artistImgStyle" [src]="artist?.images[1]?.url">
