--- a/src/app/Components/albums/albums.component.css
+++ b/src/app/Components/albums/albums.component.css
@@ -98,3 +98,10 @@
   color: white;
 
 }
+
+.loadMoreContainerStyle{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
