--- a/src/app/Components/albums/albums.component.html
+++ b/src/app/Components/albums/albums.component.html
@@ -8,25 +8,30 @@
     </div>
   </div>
 
-<div class="albumContainerStyle">
-  <div class="albumStyle" (click)="openArtistAlbum(album.external_urls.spotify)" *ngFor="let album of albums">
-    <img class="albimImgStyle" [src]="album?.images[1]?.url">
+  <div class="albumContainerStyle">
+    <div class="albumStyle" (click)="openArtistAlbum(album.external_urls.spotify)" *ngFor="let album of albums">
+      <img class="albimImgStyle" [src]="album?.images[1]?.url">
 
-    <div class="albumDataStyle">
+      <div class="albumDataStyle">
 
-      <div class="albumNameStyle">{{album.name}}</div>
+        <div class="albumNameStyle">{{album.name}}</div>
 
-      <div class="albumInfoStyle">
-        <div class="subDataStyle">{{getYear(album.release_date)}}</div>
+        <div class="albumInfoStyle">
+          <div class="subDataStyle">{{getYear(album.release_date)}}</div>
 
-        <div class="pointStyle subDataStyle"></div>
+          <div class="pointStyle subDataStyle"></div>
 
-          <div *ngFor="let artist of album.artists">
-            {{artist.name}}
-          </div>
+            <div *ngFor="let artist of album.artists">
+              {{artist.name}}
+            </div>
+        </div>
+
       </div>
-
     </div>
   </div>
-</div>
+
+  <div class="loadMoreContainerStyle">
+    <div class="loadMoreStyle" *ngIf="nextUrl" (click)="loadMore()">load More</div>
+  </div>
+
 </div>
