--- a/src/app/Components/search/search.component.html
+++ b/src/app/Components/search/search.component.html
@@ -27,4 +27,7 @@
         </div>
     </div>
   </div>
+
+  <div class="loadMoreStyle" *ngIf="nextUrl" (click)="loadMore()">load More</div>
+
 </div>
