--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-<app-nav-bar></app-nav-bar>
-<router-outlet></router-outlet>
+ <div class="container">
+ <div class="header">
+  <app-nav-bar></app-nav-bar>
+  <mat-progress-bar *ngIf="loaderService.isLoading$ | async" mode="indeterminate"></mat-progress-bar>
+  </div>
+  <div class="body">
+  <router-outlet></router-outlet>
+  </div>
+</div>
