--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,22 @@ body{
   align-items: center;
   justify-content: flex-end;
 }
+
+.loadMoreStyle{
+  display: flex;
+  color: white;
+  width: 110px;
+  margin: 20px;
+  height: 30px;
+  border-radius: 100px;
+  background: linear-gradient(135deg, #166b15 13.18%, #097b09 100%);
+  box-shadow: -3px -3px 5px 0px #034903 inset;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.mdc-linear-progress__bar-inner {
+  border-color: #2dee00 !important;
+}
