--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,4 +1,4 @@
 <div class="logInContainer" [style.backgroundImage]="'url(' + backgroundImageUrl + ')'">
   <div class="titleStle">Spotify Web Application Interview Test</div>
-  <button class="logInbtnStyle" (click)="loginWithSpotify()">Login with Spotify</button>
+  <button class="btnStyle" (click)="loginWithSpotify()">Login with Spotify</button>
 </div>
