--- a/src/app/Components/search/search.component.css
+++ b/src/app/Components/search/search.component.css
@@ -61,7 +61,7 @@
 
 .artistNameStyle{
   color: #668a0d;
-  font-family: Roboto;
+  font-family: CircularSpTitle;
   font-size: 22px;
   font-style: normal;
   font-weight: 500;
