--- a/src/app/Components/artist-registration/artist-registration.component.html
+++ b/src/app/Components/artist-registration/artist-registration.component.html
@@ -1,160 +1,4 @@
-<!-- <form class="formStyle" [style.backgroundImage]="'url(' + backgroundImageUrl + ')'" [formGroup]="artistForm" (ngSubmit)="submitForm()">
-  <div class="artistContainer">
-    <div class="titleStyle">Artist Info</div>
-
-    <div class="RowForm">
-      <mat-form-field class="example-full-width">
-        <mat-label  for="firstName">First name</mat-label>
-        <input id="firstName" formControlName="firstName" required minlength="3" matInput>
-        <mat-error *ngIf="artistForm.get('firstName')?.hasError('required')">First Name is required</mat-error>
-        <mat-error *ngIf="artistForm.get('firstName')?.hasError('minlength')">First Name must be at least 3 characters</mat-error>
-      </mat-form-field>
-
-      <mat-form-field class="example-full-width">
-        <mat-label  for="lastName">Last Name</mat-label>
-        <input id="lastName" formControlName="lastName" required minlength="3" matInput>
-        <mat-error *ngIf="artistForm.get('lastName')?.hasError('required')">
-          Last Name is required
-        </mat-error>
-        <mat-error *ngIf="artistForm.get('lastName')?.hasError('minlength')">
-          Last Name must be at least 3 characters long
-        </mat-error>
-      </mat-form-field>
-
-      <mat-form-field class="example-full-width">
-        <label for="dob">Date of Birth*</label>
-        <input matInput [matDatepicker]="dobPicker" formControlName="dob" id="dob" required [min]="minDOB">
-        <mat-datepicker-toggle matSuffix [for]="dobPicker"></mat-datepicker-toggle>
-        <mat-datepicker #dobPicker></mat-datepicker>
-        <mat-error *ngIf="artistForm.get('dob')?.invalid">
-          Date of Birth is required and should be after {{ minDOB | date: 'longDate' }}.
-        </mat-error>
-      </mat-form-field>
-    </div>
-
-    <div class="RowForm">
-
-      <mat-form-field class="example-full-width">
-        <mat-label  for="email">Email</mat-label>
-        <input id="email" formControlName="email" type="email" required matInput>
-        <mat-error *ngIf="artistForm.get('email')?.invalid && artistForm.get('email')?.touched">
-          Please enter a valid email address.
-        </mat-error>
-      </mat-form-field>
-
-      <mat-form-field class="example-full-width">
-        <mat-label  for="phoneNumber">Phone Number</mat-label>
-        <input type="text" id="phoneNumber" formControlName="phoneNumber" required pattern="[0-9]{8,8}" matInput>
-        <mat-error *ngIf="artistForm.get('phoneNumber')?.hasError('pattern')">Invalid phone number format</mat-error>
-      </mat-form-field>
-
-      <div class=" example-full-width">
-        <div class="imgContainerStyle">
-          <div class="lableInputContainer">
-            <mat-label class="imgLableStyle" for="profilePicture">Profile Picture*</mat-label>
-            <input type="file" (change)="selectFile($event, ArtistType)" id="profilePicture" formControlName="profilePicture" required>
-          </div>
-
-          <div style="padding-right: 20px;">
-            <div><img style="max-width: 50px;" [src]="artistUrl" *ngIf="artistUrl"></div>
-          </div>
-        </div>
-
-        <div style="height: 22px;">
-          <div [innerHtml]='artistMsg' *ngIf="artistMsg" style="color: red;"></div>
-          <mat-error *ngIf="artistForm.get('profilePicture')?.invalid && artistForm.get('profilePicture')?.touched">
-            Profile picture is required.
-          </mat-error>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="RowForm">
-      <mat-form-field class="example-full-width">
-        <mat-label  for="stageName">Stage Name</mat-label>
-        <input id="stageName" formControlName="stageName" type="text" matInput>
-      </mat-form-field>
-
-      <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label for="backstory">Artist Backstory</mat-label>
-        <textarea matInput id="backstory" formControlName="backstory"></textarea>
-      </mat-form-field>
-
-      <mat-form-field class="example-full-width">
-        <label for="startingDate">Starting Date</label>
-        <input matInput [matDatepicker]="sDate" formControlName="startingDate" id="startingDate">
-        <mat-datepicker-toggle matSuffix [for]="sDate"></mat-datepicker-toggle>
-        <mat-datepicker #sDate></mat-datepicker>
-      </mat-form-field>
-    </div>
-  </div>
-
-  <div class="artistContainer" formArrayName="albums">
-    <div style="width: 95%;" *ngFor="let album of albums.controls; let i = index" [formGroupName]="i">
-      <h4 class="titleStyle">Album {{ i + 1 }}</h4>
-      <div class="RowForm">
-        <mat-form-field class="example-full-width">
-          <label for="albumName{{ i }}">Stage Name</label>
-          <input id="albumName{{ i }}" formControlName="name" type="text" matInput>
-        </mat-form-field>
-
-        <div class="example-full-width">
-        <div class="imgContainerStyle ">
-          <div class="lableInputContainer">
-            <label style="color: black;" class="imgLableStyle" for="albumPicture{{ i }}">Album Picture</label>
-            <input type="file" (change)="selectFile($event, AlbumType)" id="albumPicture{{ i }}" formControlName="picture">
-          </div>
-
-          <div style="padding-right: 20px;">
-            <div><img style="max-width: 50px;" [src]="albumUrl" *ngIf="albumUrl"></div>
-          </div>
-        </div>
-        <div style="height: 22px;">
-          <div [innerHtml]='albumMsg' *ngIf="albumMsg" style="color: red;"></div>
-        </div>
-      </div>
-        <mat-form-field class="example-full-width">
-          <label for="albumDate{{ i }}">Album Date</label>
-          <input matInput [matDatepicker]="albumDate" formControlName="date" id="albumDate{{ i }}" >
-          <mat-datepicker-toggle matSuffix [for]="albumDate"></mat-datepicker-toggle>
-          <mat-datepicker #albumDate></mat-datepicker>
-        </mat-form-field>
-      </div>
-
-    </div>
-
-    <button class="btnStyle" mat-button type="button" (click)="addAlbum()">Add Album</button>
-  </div>
-
-  <div class="artistContainer" formArrayName="songs">
-    <div style="width: 95%;" *ngFor="let song of songs.controls; let i = index" [formGroupName]="i">
-      <h4 class="titleStyle">Song {{ i + 1 }}</h4>
-      <div class="RowForm">
-        <mat-form-field class="example-full-width">
-          <label for="songName{{ i }}">Song Name</label>
-          <input id="songName{{ i }}" formControlName="name" type="text" matInput>
-        </mat-form-field>
-
-        <mat-form-field class="example-full-width">
-          <label for="songDuration{{ i }}">Song Duration</label>
-          <input id="songDuration{{ i }}" formControlName="duration" type="text" matInput>
-        </mat-form-field>
-      </div>
-    </div>
-    <button class="btnStyle" mat-button type="button" (click)="addSong()">Add Song</button>
-  </div>
-
-  <button class="btnStyle" [disabled]="!artistForm.valid" mat-button type="submit">Register Artist</button>
-</form>
-
-<div (click)="saveForm()">save</div> -->
-
-
-
-<!-- [style.backgroundImage]="'url(' + backgroundImageUrl + ')'" -->
-
-
+<div [style.backgroundImage]="'url(' + backgroundImageUrl + ')'">
 <form class="formStyle"  [formGroup]="artistForm" (ngSubmit)="submitForm()">
   <div class="artistContainer">
     <div class="titleStyle">Artist Info</div>
@@ -176,10 +20,10 @@
 
       <mat-form-field class="example-full-width">
         <label for="dob">Date of Birth*</label>
-        <input matInput [matDatepicker]="dobPicker" formControlName="dob" id="dob" required [min]="minDOB">
+        <input matInput [matDatepicker]="dobPicker" formControlName="dob" id="dob" required>
         <mat-datepicker-toggle matSuffix [for]="dobPicker"></mat-datepicker-toggle>
         <mat-datepicker #dobPicker></mat-datepicker>
-        <mat-error *ngIf="artistForm.get('dob')?.invalid">Date of Birth is required and should be after {{ minDOB | date: 'longDate' }}.</mat-error>
+        <mat-error *ngIf="artistForm.get('dob')?.hasError('minAge')"> Date of birth must be at least 25 years ago.</mat-error>
       </mat-form-field>
     </div>
 
@@ -187,12 +31,16 @@
       <mat-form-field class="example-full-width">
         <mat-label for="email">Email</mat-label>
         <input id="email" formControlName="email" type="email" required matInput>
+        <mat-error *ngIf="artistForm.get('email')?.hasError('required')">Email is required</mat-error>
         <mat-error *ngIf="artistForm.get('email')?.invalid && artistForm.get('email')?.touched">Please enter a valid email address.</mat-error>
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label for="phoneNumber">Phone Number</mat-label>
-        <input type="text" id="phoneNumber" formControlName="phoneNumber" required pattern="[0-9]{8,8}" matInput>
+        <input type="text" id="phoneNumber" formControlName="phoneNumber" required matInput>
+
+
+        <mat-error *ngIf="artistForm.get('phoneNumber')?.hasError('required')">Phone Number is required</mat-error>
         <mat-error *ngIf="artistForm.get('phoneNumber')?.hasError('pattern')">Invalid phone number format</mat-error>
       </mat-form-field>
 
@@ -200,7 +48,7 @@
         <div class="imgContainerStyle">
           <div class="lableInputContainer">
             <mat-label class="imgLableStyle" for="profilePicture">Profile Picture*</mat-label>
-            <input type="file" (change)="selectFile($event, ArtistType)" id="profilePicture" formControlName="profilePicture" required>
+            <input type="file" accept="image/*" (change)="onFileSelected($event, ArtistType,artistId)" id="profilePicture" formControlName="profilePicture" required>
           </div>
 
           <div style="padding-right: 20px;">
@@ -250,15 +98,15 @@
           <div class="imgContainerStyle ">
             <div class="lableInputContainer">
               <label style="color: black;" class="imgLableStyle" for="albumPicture{{ i }}">Album Picture</label>
-              <input type="file" (change)="selectFile($event, AlbumType)" id="albumPicture{{ i }}" formControlName="picture">
+              <input type="file" (change)="onFileSelected($event,AlbumType,i)" accept="image/*">
             </div>
 
             <div style="padding-right: 20px;">
-              <div><img style="max-width: 50px;" [src]="albumUrl" *ngIf="albumUrl"></div>
+              <div><img style="max-width: 50px;" [src]="getAlbumImg(i)"></div>
             </div>
           </div>
           <div style="height: 22px;">
-            <div [innerHtml]="albumMsg" *ngIf="albumMsg" style="color: red;"></div>
+            <div [innerHtml]="getErrMsg(i)" *ngIf="getErrMsg(i)" style="color: red;"></div>
           </div>
         </div>
 
@@ -296,4 +144,5 @@
   <button class="btnStyle" [disabled]="!artistForm.valid" mat-button type="submit">Register Artist</button>
 </form>
 
-<div (click)="saveForm()">save</div>
+<button class="btnStyle" mat-button (click)="saveForm()">Save Registred Artists</button>
+</div>
